# verethiel

./: Cargo.toml  LICENSE  README.md
src/: main.rs  utility.rs
src/diff/: mod.rs  tests.rs
src/sort/: mod.rs  tests.rs
src/utility/: de.rs  ser.rs
src/utility/open_file/: mod.rs  tests.rs
src/utility/translation/: de.rs  mod.rs  ser.rs  tests.rs
src/verify/: mod.rs  test.rs
src/verify_templates/: mod.rs
