[package]
name = "verethiel"
version = "0.1.0"
edition = "2024"
authors = ["Lukas Huth"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/LukasHuthOrg/verethiel"
homepage = "https://github.com/LukasHuthOrg/verethiel"
keywords = ["cli", "json", "whatever-it-does"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.26.0"
regex = "1.12.3"
